Reboot/Recovery QS Tile
Change-Id: I25239fc8cd8d3d2da8e8b392f87d3814d96d55a1

--- a/packages/SystemUI/AndroidManifest.xml
+++ b/packages/SystemUI/AndroidManifest.xml
@@ -164,6 +164,10 @@
 
     <!-- shortcut manager -->
     <uses-permission android:name="android.permission.RESET_SHORTCUT_MANAGER_THROTTLING" />
+    
+    <!-- Reboot -->
+    <uses-permission android:name="android.permission.REBOOT" />
+    <uses-permission android:name="android.permission.RECOVERY" />    
 
     <!-- DU permissions -->
     <uses-permission android:name="android.permission.FORCE_STOP_PACKAGES" />
